mudança de cor do index, e add page confirmação

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #dde7f2;
+  background-color: #ccc;
   height: 100vh;
   display: flex;
   align-items: center;
