--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #ccc;
+  background-color: #b3cfee;
   height: 100vh;
   display: flex;
   align-items: center;
